RESOLVED FIXED157847
[iOS] Fullscreen video playback broken in WK1 apps
https://bugs.webkit.org/show_bug.cgi?id=157847
Summary [iOS] Fullscreen video playback broken in WK1 apps
Eric Carlson
Reported 2016-05-18 10:41:56 PDT
The WebVideoFullscreenInterface/WebVideoFullscreenModel/WebPlaybackSessionModel refactoring broke playback in WebKit 1 clients.
Attachments
Proposed patch (20.33 KB, patch)
2016-05-18 14:06 PDT, Eric Carlson
no flags
Patch for landing. (20.43 KB, patch)
2016-05-18 14:52 PDT, Eric Carlson
no flags
Archive of layout-test-results from ews115 for mac-yosemite (12.27 MB, application/zip)
2016-05-18 16:31 PDT, Build Bot
no flags
Eric Carlson
Comment 1 2016-05-18 10:42:44 PDT
<Rdar://problem/25879521>
Eric Carlson
Comment 2 2016-05-18 14:06:12 PDT
Created attachment 279280 [details] Proposed patch
Jer Noble
Comment 3 2016-05-18 14:08:35 PDT
Comment on attachment 279280 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=279280&action=review R=me, with nit: > Source/WebCore/platform/cocoa/WebVideoFullscreenModelVideoElement.h:59 > + WebPlaybackSessionModelMediaElement& playbackSessionModel() { return *m_playbackSessionModel.ptr(); } This can just "return m_playbackSessionModel;". There's an auto-cast to the ref type from Ref<>.
Eric Carlson
Comment 4 2016-05-18 14:52:27 PDT
Created attachment 279287 [details] Patch for landing.
Build Bot
Comment 5 2016-05-18 16:31:08 PDT
Comment on attachment 279287 [details] Patch for landing. Attachment 279287 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1344825 New failing tests: storage/indexeddb/modern/handle-user-delete.html
Build Bot
Comment 6 2016-05-18 16:31:12 PDT
Created attachment 279316 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Eric Carlson
Comment 7 2016-05-18 17:20:29 PDT
Note You need to log in before you can comment on or make changes to this bug.